syntax = "proto3";

package sdk;

import "sdk-api/proto/context.proto";
import "sdk-api/proto/commitments.proto";
import "sdk-api/proto/queries.proto";
import "sdk-api/proto/ood_frame.proto";
import "sdk-api/proto/fri_proof.proto";


// A STARK proof for a computation.
message StarkProof {
    // Basic metadata about the execution of the computation described by this proof.
    Context context = 1;
    // Commitments made by the prover during the commit phase of the protocol.
    Commitments commitments = 2;
    // Decommitments of extended execution trace values (for all trace segments) at position
    // queried by the verifier.
    TraceQueries trace_queries = 3;
    // Decommitments of constraint composition polynomial evaluations at positions queried by
    // the verifier.
    ConstraintQueries constraint_queries = 4;
    // Trace and constraint polynomial evaluations at an out-of-domain point.
    OodFrame ood_frame = 5;
    // Low-degree proof for a DEEP composition polynomial.
    FriProof fri_proof = 6;
    // Proof-of-work nonce for query seed grinding.
    uint64 pow_nonce = 7;
}